kubernetes/go-hello-world.yaml
---
# Source: go-hello-world/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world
  namespace: hello-demo
  labels:
    helm.sh/chart: go-hello-world-0.0.1
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: go-hello-world
    app.kubernetes.io/version: "v0.0.7"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: go-hello-world
---
# Source: go-hello-world/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world
  namespace: hello-demo
  labels:
    helm.sh/chart: go-hello-world-0.0.1
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: go-hello-world
    app.kubernetes.io/version: "v0.0.7"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: go-hello-world
      app.kubernetes.io/instance: go-hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-hello-world
        app.kubernetes.io/instance: go-hello-world
    spec:
      serviceAccountName: go-hello-world
      securityContext:
        {}
      containers:
        - name: go-hello-world
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "docker.io/usamaahmadkhan/go-hello-world:v0.0.7"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
# Source: go-hello-world/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello-world
  namespace: hello-demo
  labels:
    helm.sh/chart: go-hello-world-0.0.1
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: go-hello-world
    app.kubernetes.io/version: "v0.0.7"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "hello.apps-crc.testing"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  go-hello-world
                port:
                  name: http
